# avro-to-python-types

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  releaseOnVersionTag.yml  versionBump.yml
avro_to_python/: __init__.py  generate_typed_dict.py  schema_mapping.py  schema_to_typed_dict.py  typed_dict.py
avro_to_python_types/: __init__.py  constants.py  generate_typed_dict.py  schema_mapping.py  typed_dict_from_schema.py
examples/sync_types/: __init__.py  sync_types.py
examples/sync_types/schemas/: nested_record.avsc  nested_records.avsc  nested_records_deep.avsc
examples/sync_types/types/: nested_record.py  nested_records.py  nested_records_deep.py
tests/: test_generate_typed_dict.py  test_schema_to_typed_dict.py  test_sync_types.py
tests/snapshots/: snap_test_schema_to_typed_dict.py  snap_test_sync_types.py
tests/test_cases/: nested_record.avsc  nested_records.avsc  nested_records_deep.avsc  no_optional_field_record.avsc
tests/test_cases_expandable/: common.ChildA.avsc  common.ChildB.avsc  common.ChildC.avsc  domain.Parent.avsc
tests/test_handshake/: org.apache.avro.ipc.HandshakeRequest.avsc  org.apache.avro.ipc.HandshakeResponse.avsc
tests/test_shopping_cart/: com.wave.Order.avsc  com.wave.OrderDetail.avsc  com.wave.Product.avsc
