[tool.poetry]
name = "avro-to-python-types"
version = "0.3.0"
description = "A library for converting avro schemas to python types."
readme = "README.md"
authors = ["Dan Green-Leipciger"]
repository = "https://github.com/waveaccounting/avro-to-python-types"
license = "MIT"
keywords = ["avro", "codegen", "avro schema", "typegen"]

[tool.black]
exclude = '''

(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tests/snapshots
)
'''

[tool.poetry.dependencies]
python = "^3.9"
astor = "^0.8.1"
fastavro = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
snapshottest = "^0.6.0"

[tool.poetry.scripts]
sync-example = 'examples:generate_types_from_schemas'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"