[tool.poetry]
name = "avro-to-python-types"
version = "0.12.1"
description = "A library for converting avro schemas to python types."
readme = "README.md"
authors = ["Dan Green-Leipciger"]
repository = "https://github.com/waveaccounting/avro-to-python-types"
license = "MIT"
keywords = ["avro", "codegen", "avro schema", "typegen"]

[tool.black]
exclude = '''

(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tests/snapshots
)
'''

[tool.poetry.dependencies]
python = "^3.8"
fastavro = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
snapshottest = "^0.6.0"
black = "^20.8b1"
debugpy = "^1.5.1"

[tool.poetry.scripts]
sync-example = 'examples:generate_types_from_schemas'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"